# CPIAS_DL

./: CMakeLists.txt  README.md
basictool/: colormapTableBox.cpp  colormapTableBox.h  imageloadingbox.cpp  imageloadingbox.h  imageprocessingbox.cpp  imageprocessingbox.h  mydata.h
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
view/: segmentationvisualization.cpp  segmentationvisualization.h  segmentationvisualization.ui  singleviewslicevisualization.cpp  singleviewslicevisualization.h  singleviewslicevisualization.ui  volumeviewvisualization.cpp  volumeviewvisualization.h  volumeviewvisualization.ui
